<resources>
    <string name="app_name">MovTik</string>
    <string name="register_movie">Register Movie</string>
    <string name="display_movies">Display Movies</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="student_details">Yasitha Gamage\n W1761101 | 2019419</string>
    <string name="available_movies">Available Movies</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="save">save</string>
    <string name="lookup">lookup</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="plan_it_plat_it">Plan It &amp; Play It</string>
    <string name="update_txt">Update</string>
    <string name="movie_review">Movie Review</string>
    <string name="movie_actors">Movie Actors</string>
    <string name="movie_director">Movie Director</string>
    <string name="movie_year">Movie Year</string>
    <string name="movie_title">Movie Title</string>
    <string name="edit_details">Edit Details</string>
    <string name="loading">Loading Data ....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>